--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <ktor.version>1.3.2</ktor.version>
         <arrow.version>0.10.5</arrow.version>
         <clikt.version>2.8.0</clikt.version>
+        <kotest.version>4.1.0</kotest.version>
         <serialization.version>1.0.0-RC</serialization.version>
     </properties>
 
@@ -38,11 +39,11 @@
             <artifactId>arrow-syntax</artifactId>
             <version>${arrow.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.ajalt</groupId>
-            <artifactId>clikt</artifactId>
-            <version>${clikt.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.ajalt</groupId>-->
+<!--            <artifactId>clikt</artifactId>-->
+<!--            <version>${clikt.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-client-json</artifactId>
@@ -76,10 +77,26 @@
             <version>2.0.21</version>
         </dependency>
         <dependency>
-            <groupId>propCheck</groupId>
-            <artifactId>propCheck-kt</artifactId>
-            <version>0.9.6</version>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-assertions-core-jvm</artifactId>
+            <version>${kotest.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-runner-junit5-jvm</artifactId>
+            <version>${kotest.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-runner-console-jvm</artifactId>
+            <version>${kotest.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-property-jvm</artifactId>
+            <version>${kotest.version}</version>
+        </dependency>
+
         <!-- test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
