--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.3.72</kotlin.version>
+        <kotlin.version>1.4.0</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <ktor.version>1.3.2</ktor.version>
@@ -21,6 +21,7 @@
         <clikt.version>2.8.0</clikt.version>
         <kotest.version>4.1.0</kotest.version>
         <serialization.version>1.0.0-RC</serialization.version>
+        <kotlinx.version>1.3.9</kotlinx.version>
     </properties>
 
     <dependencies>
@@ -76,25 +77,30 @@
             <artifactId>swagger-parser</artifactId>
             <version>2.0.21</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.kotest</groupId>-->
+<!--            <artifactId>kotest-assertions-core-jvm</artifactId>-->
+<!--            <version>${kotest.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.kotest</groupId>-->
+<!--            <artifactId>kotest-runner-junit5-jvm</artifactId>-->
+<!--            <version>${kotest.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.kotest</groupId>-->
+<!--            <artifactId>kotest-runner-console-jvm</artifactId>-->
+<!--            <version>${kotest.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.kotest</groupId>-->
+<!--            <artifactId>kotest-property-jvm</artifactId>-->
+<!--            <version>${kotest.version}</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-assertions-core-jvm</artifactId>
-            <version>${kotest.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-runner-junit5-jvm</artifactId>
-            <version>${kotest.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-runner-console-jvm</artifactId>
-            <version>${kotest.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.kotest</groupId>
-            <artifactId>kotest-property-jvm</artifactId>
-            <version>${kotest.version}</version>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
         </dependency>
 
         <!-- test dependencies -->
