--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <kotest.version>4.1.0</kotest.version>
         <serialization.version>1.0.0-RC</serialization.version>
         <kotlinx.version>1.3.9</kotlinx.version>
+        <mockk.version>1.10.0</mockk.version>
     </properties>
 
     <dependencies>
@@ -120,6 +121,12 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>${mockk.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
