--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
             <artifactId>arrow-syntax</artifactId>
             <version>${arrow.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.github.ajalt</groupId>-->
-<!--            <artifactId>clikt</artifactId>-->
-<!--            <version>${clikt.version}</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.ajalt</groupId>-->
+        <!--            <artifactId>clikt</artifactId>-->
+        <!--            <version>${clikt.version}</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-client-json</artifactId>
@@ -83,26 +83,26 @@
             <artifactId>rest-assured</artifactId>
             <version>4.3.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.kotest</groupId>-->
-<!--            <artifactId>kotest-assertions-core-jvm</artifactId>-->
-<!--            <version>${kotest.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.kotest</groupId>-->
-<!--            <artifactId>kotest-runner-junit5-jvm</artifactId>-->
-<!--            <version>${kotest.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.kotest</groupId>-->
-<!--            <artifactId>kotest-runner-console-jvm</artifactId>-->
-<!--            <version>${kotest.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.kotest</groupId>-->
-<!--            <artifactId>kotest-property-jvm</artifactId>-->
-<!--            <version>${kotest.version}</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.kotest</groupId>-->
+        <!--            <artifactId>kotest-assertions-core-jvm</artifactId>-->
+        <!--            <version>${kotest.version}</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.kotest</groupId>-->
+        <!--            <artifactId>kotest-runner-junit5-jvm</artifactId>-->
+        <!--            <version>${kotest.version}</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.kotest</groupId>-->
+        <!--            <artifactId>kotest-runner-console-jvm</artifactId>-->
+        <!--            <version>${kotest.version}</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.kotest</groupId>-->
+        <!--            <artifactId>kotest-property-jvm</artifactId>-->
+        <!--            <version>${kotest.version}</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
@@ -122,11 +122,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.beust</groupId>-->
-<!--            <artifactId>klaxon</artifactId>-->
-<!--            <version>5.0.1</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.beust</groupId>-->
+        <!--            <artifactId>klaxon</artifactId>-->
+        <!--            <version>5.0.1</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
@@ -162,15 +162,18 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <configuration>
-<!--                    <compilerPlugins>-->
-<!--                        <plugin>kotlinx-serialization</plugin>-->
-<!--                    </compilerPlugins>-->
+                    <!--                    <compilerPlugins>-->
+                    <!--                        <plugin>kotlinx-serialization</plugin>-->
+                    <!--                    </compilerPlugins>-->
                 </configuration>
                 <executions>
                     <execution>
