--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.4.0</kotlin.version>
+        <kotlin.version>1.4.10</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <ktor.version>1.3.2</ktor.version>
@@ -21,7 +21,7 @@
         <clikt.version>2.8.0</clikt.version>
         <kotest.version>4.1.0</kotest.version>
         <serialization.version>1.0.0-RC</serialization.version>
-        <kotlinx.version>1.4.0</kotlinx.version>
+        <kotlinx.version>1.4.10</kotlinx.version>
         <mockk.version>1.10.0</mockk.version>
     </properties>
 
@@ -30,32 +30,6 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.arrow-kt</groupId>
-            <artifactId>arrow-core</artifactId>
-            <version>${arrow.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.arrow-kt</groupId>
-            <artifactId>arrow-syntax</artifactId>
-            <version>${arrow.version}</version>
-        </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.ajalt</groupId>-->
-        <!--            <artifactId>clikt</artifactId>-->
-        <!--            <version>${clikt.version}</version>-->
-        <!--        </dependency>-->
-        <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-client-json</artifactId>
-            <version>${ktor.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-serialization</artifactId>
-            <version>${ktor.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
@@ -68,11 +42,11 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-client-apache</artifactId>
-            <version>${ktor.version}</version>
-            <scope>compile</scope>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-serialization</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
+
         <dependency>
             <groupId>io.swagger.parser.v3</groupId>
             <artifactId>swagger-parser</artifactId>
@@ -83,26 +57,6 @@
             <artifactId>rest-assured</artifactId>
             <version>4.3.0</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>io.kotest</groupId>-->
-        <!--            <artifactId>kotest-assertions-core-jvm</artifactId>-->
-        <!--            <version>${kotest.version}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.kotest</groupId>-->
-        <!--            <artifactId>kotest-runner-junit5-jvm</artifactId>-->
-        <!--            <version>${kotest.version}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.kotest</groupId>-->
-        <!--            <artifactId>kotest-runner-console-jvm</artifactId>-->
-        <!--            <version>${kotest.version}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.kotest</groupId>-->
-        <!--            <artifactId>kotest-property-jvm</artifactId>-->
-        <!--            <version>${kotest.version}</version>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
@@ -122,11 +76,6 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>com.beust</groupId>-->
-        <!--            <artifactId>klaxon</artifactId>-->
-        <!--            <version>5.0.1</version>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
@@ -137,6 +86,10 @@
 
     <repositories>
         <repository>
+            <id>kotlinx</id>
+            <url>https://kotlin.bintray.com/kotlinx</url>
+        </repository>
+        <repository>
             <id>jcenter</id>
             <url>https://jcenter.bintray.com</url>
         </repository>
@@ -146,7 +99,7 @@
         </repository>
         <repository>
             <id>mavencentral</id>
-            <url>http://repo.maven.apache.org/maven2/</url>
+            <url>https://repo.maven.apache.org/maven2/</url>
         </repository>
     </repositories>
 
@@ -171,9 +124,9 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <configuration>
-                    <!--                    <compilerPlugins>-->
-                    <!--                        <plugin>kotlinx-serialization</plugin>-->
-                    <!--                    </compilerPlugins>-->
+                    <compilerPlugins>
+                        <plugin>kotlinx-serialization</plugin>
+                    </compilerPlugins>
                 </configuration>
                 <executions>
                     <execution>
@@ -190,25 +143,14 @@
                             <goal>test-compile</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>kapt</id>
-                        <goals>
-                            <goal>kapt</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>src/main/kotlin</sourceDir>
-                            </sourceDirs>
-                            <annotationProcessorPaths>
-                                <annotationProcessorPath>
-                                    <groupId>io.arrow-kt</groupId>
-                                    <artifactId>arrow-meta</artifactId>
-                                    <version>${arrow.version}</version>
-                                </annotationProcessorPath>
-                            </annotationProcessorPaths>
-                        </configuration>
-                    </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-serialization</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
