refactor param spec for  reuse in body

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
                     <compilerPlugins>
                         <plugin>kotlinx-serialization</plugin>
                     </compilerPlugins>
+                    <languageVersion>1.4</languageVersion>
                 </configuration>
                 <executions>
                     <execution>
