pom and todo updates

--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.dockson.shaper</groupId>
     <artifactId>RestShaper</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>org.example RestShaper</name>
+    <name>org.dockson.shaper RestShaper</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
