--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>javafaker</artifactId>
             <version>0.15</version>
         </dependency>
+        <dependency>
+            <groupId>org.docksonwedge.dockmatcher</groupId>
+            <artifactId>matcher</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
