--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.4.10</kotlin.version>
+        <kotlin.version>1.4.31</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <ktor.version>1.3.2</ktor.version>
@@ -23,8 +23,10 @@
         <kotest.version>4.1.0</kotest.version>
         <serialization.version>1.0.0-RC</serialization.version>
         <kotlinx.version>1.4.10</kotlinx.version>
-        <mockk.version>1.10.0</mockk.version>
+        <mockk.version>1.11.0</mockk.version>
         <kafka.version>2.0.0</kafka.version>
+        <java.version>1.8</java.version>
+        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     </properties>
 
     <dependencies>
@@ -131,6 +133,11 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -171,7 +178,7 @@
                     <compilerPlugins>
                         <plugin>kotlinx-serialization</plugin>
                     </compilerPlugins>
-                    <languageVersion>1.4</languageVersion>
+<!--                    <languageVersion>${kotlin.version}</languageVersion>-->
                 </configuration>
                 <executions>
                     <execution>
