adding result instant(untested)

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>${serialization.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-datetime-jvm</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-serialization</artifactId>
             <version>${kotlin.version}</version>
