changes for dockerized consumers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     build: .
     volumes:
       - ./target:/target
+    environment:
+      - IS_DOCKER=true
+
+networks:
+  default:
+    name: restshaper-network
