--- a/docker-compose-api.yml
+++ b/docker-compose-api.yml
@@ -1,11 +1,15 @@
 version: "3.7"
 services:
-  restshaper:
-    build: .
+  restshaper_api:
+    build:
+      context: .
+      dockerfile: Api.Dockerfile
     volumes:
       - ./target:/target
     environment:
       - IS_DOCKER=true
+    ports:
+      - "8001:8001"
 
 networks:
   default:
